--- a/ferrari.html
+++ b/ferrari.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div id="galeri">
-                    <img src="resimler/ferrari2.jpg" alt="Ferrari" id="resim1" class="img-fluid rounded" style="display: block;">
+                    <img src="resimler/Ferrari1.jpg" alt="Ferrari" id="resim1" class="img-fluid rounded" style="display: block;">
                     <img src="resimler/Ferrari3.jpg" alt="Ferrari 2" id="resim2" class="img-fluid rounded" style="display: none;">
                     <img src="resimler/Ferrari4.jpg" alt="Ferrari 3" id="resim3" class="img-fluid rounded" style="display: none;">
                 </div>
